# Hybrid-Quantum-Graph-AI-QAOA-GNN-Biomedical-Optimization

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  requirements.txt  test.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  copilot-agent.yml
.mplconfig/: fontlist-v390.json
data/: breast_cancer.csv  prostate_top10_variance_panel_meta.json  prostate_top32_variance_panel_meta.json
docs/: referee_figure_revision_plan.md  repo_restructure_plan.md  research_gap_assessment.md
experiments/biomedical/: run_bio_baselines.py
experiments/qaoa/: run_cross_family_transfer.py  run_morphology_transfer_bridge.py  run_qaoa_baselines.py  run_transcriptomic_adaptation_sweep.py  run_transcriptomic_headline_benchmark.py  run_transcriptomic_noise.py  run_transcriptomic_seed_sweep.py  run_transcriptomic_size_sweep.py
notebooks/: bio_demo.ipynb  qaoa_demo.ipynb  quantum_ai_bio_combined.ipynb
notebooks/.ipynb_checkpoints/: bio_demo-checkpoint.ipynb  qaoa_demo-checkpoint.ipynb  quantum_ai_bio_combined-checkpoint.ipynb
outputs/: breast_cancer_expanded_processed.csv  breast_cancer_processed.csv  breast_cancer_raw.csv  ctg_processed.csv  ctg_raw.csv  maxcut_graph.csv  qaoa_classical_angles.csv
outputs/tables/: biomedical_baselines.csv  qaoa_adaptation_sweep.csv  qaoa_adaptation_sweep_detailed.csv  qaoa_adaptation_sweep_meta.json  qaoa_baselines.csv  qaoa_cross_family_transfer.csv  qaoa_cross_family_transfer_detailed.csv  qaoa_cross_family_transfer_meta.json  qaoa_headline_benchmark_detailed.csv  qaoa_headline_benchmark_meta.json  qaoa_headline_benchmark_summary.csv  qaoa_morphology_concentration_bridge.csv  qaoa_morphology_transfer.csv  qaoa_morphology_transfer_detailed.csv  qaoa_morphology_transfer_meta.json  qaoa_noise_summary.csv  qaoa_noise_summary_meta.json  qaoa_seed_sweep.csv  qaoa_seed_sweep_detailed.csv  qaoa_seed_sweep_meta.json  qaoa_size_sweep.csv  qaoa_size_sweep_detailed.csv  qaoa_size_sweep_meta.json
paper/: research_paper.md
research_paper/: main.tex  refs.bib
scripts/: export_notebook_html.py  generate_paper_figures.py  refresh_transcriptomic_cache.py
src/: data.py  gnn.py  notebook_export.py  qaoa_sim.py  server.py  train.py
src/biomedical/: __init__.py  baselines.py
src/common/: __init__.py  io.py
src/qaoa/: __init__.py  baselines.py  concentration_projected.py  morphology.py  single_cell.py  transcriptomic.py
src/serving/: __init__.py
submission/: main.bbl  main.tex  main.tex.bak_serieschain  refs.bib  refs.bib.bak_idfix  refs.bib.bak_serieschain
submission/code/: exp_ood_matched_anchor.py  gen_fig10_ece.py  gen_fig11_budget_allocation.py  gen_fig1_runtime.py  gen_fig2_evals.py  gen_fig3_pareto.py  gen_fig4_speedup.py  gen_fig5_eval_reduction.py  gen_fig6_reliability.py  gen_fig7_cumulative_savings.py  gen_fig_landscape_trust.py  make_jmlr_mirror_artifacts.py  make_ood_tables.py  multiseed_robustness.py  pyproject.toml
submission/code/python/uq_qaoa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
submission/code/tables/: ood_matched_anchor_summary.csv  ood_per_family.csv  table_ood_matched_anchor.tex
website/: README_SITE.md  demo.js  index.html  notebook-shared.css  style.css
website/notebooks_html/: bio_demo.html  qaoa_demo.html  quantum_ai_bio_combined.html
